package com.client_management.model;

public enum Role {
    ADMIN, STANDARD
}
