@startuml client_management_system

'modelos'

class User{
    String name
    String id
    String userName
    String password

    getters()
    setters()
    constructor()
    addAction(): void
}

class ActionHistory{
    String description
    Long timeOfAction

    ActionHistory()
    getters()
}

enum Role{
    ADMIN
    STANDARD
}

'Repositorio' 
class UserRepository{
    addUser(): boolean
    findUserById(): User
    findUserByUserName(): User
    updateUserName(): Boolean
    updateUserPassword(): Boolean
    deleteUser(): Boolean
}

'service'
class UserService{
    createUser(): void
    searchUserById(): String
    searchUserByUserName(): String
    updateUserName(): void
    updateUserPassword(): void
    deleteUser(): void
}

class Authentication{
    login(): void
}


'relaciones'
User --> Role: Role
User "1" *-- "1..100" ActionHistory
Authentication -left-> UserService
Authentication --> User
UserService -right-> User
UserRepository "1" *-- "1..50"User
UserRepository <-- UserService

@enduml